--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.22.5"
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/react-test-renderer": "^18.0.0"
   }
 }
